package com.design.pattern.iterator;

/**
 * 表示书这个实体的类
 *
 * @author hf huminxi2017@gmail.com
 * @version on 2018/12/6 17:26
 */
public class Book {

    private String name;

    public Book(String name) {
        this.name = name;
    }

    public String getName() {
        return name;
    }
}
