package com.design.pattern.iterator;

/**
 * 用于遍历 BookShelf 集合的迭代器。
 *
 * @author hf huminxi2017@gmail.com
 * @version on 2018/12/6 17:39
 */
public class BookShelfIterator implements Iterator {
    private BookShelf bookShelf;
    private int index;

    public BookShelfIterator(BookShelf bookShelf) {
        this.bookShelf = bookShelf;
        this.index = 0;
    }

    @Override
    public boolean hasNext() {
        return index < bookShelf.getLength();
    }

    @Override
    public Object next() {
        Book book = bookShelf.getBookAt(index);
        index++;
        return book;
    }
}
